--- a/admindashboard/package.json
+++ b/admindashboard/package.json
@@ -7,7 +7,12 @@
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
+    "bootstrap-daterangepicker": "^3.0.5",
+    "jquery": "^3.4.1",
+    "moment": "^2.24.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.0",
+    "react-bootstrap-daterangepicker": "^4.1.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
     "reactstrap": "^8.4.1"
