boilerplate for salespage set up

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 /admindashboard/package-lock.json
 /admindashboard/.idea
 /admindashboard/node_modules
+/salespage/node_modules
+/salespage/.idea
+/salespage/package-lock.json
