--- a/salespage/package.json
+++ b/salespage/package.json
@@ -6,9 +6,18 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.4.1",
+    "bootstrap-daterangepicker": "^3.0.5",
+    "google-maps-react": "^2.0.2",
+    "jquery": "^3.4.1",
+    "moment": "^2.24.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.0",
+    "react-bootstrap-daterangepicker": "^4.1.0",
+    "react-datepicker": "^2.14.0",
     "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "reactstrap": "^8.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.1"
   }
 }
