--- a/medicor/package.json
+++ b/medicor/package.json
@@ -9,8 +9,11 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
+    "react-card-carousel": "^1.1.3",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
+    "react-responsive-carousel": "^3.2.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "reactstrap": "^8.4.1",
